# nam_entropy

./: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: workflow.yml
notebooks/: A. Automatic entropy and information calculations.ipynb  B. Interactive entropy and information calculations.ipynb  C. Programmatic entropy and information calculations.ipynb  D. Programmatic Spherical Entropy and Information Calculations.ipynb  E. Online Spherical Entropy Calculations.ipynb  E2. Online Spherical Entropy Calculations -- USING NEW CODE.ipynb
src/model_config files from Claude -- 2025-11-18/: model_config.py
src/nam_entropy/: __init__.py  bin_distribution_plots.py  h.py  h2.py  integrated_distribution_2d_sampler.py  make_data.py  model_analyzer.py  model_config.py  validation.py
tests/: __init__.py  conftest.py  test_binning.py  test_config.py  test_data_prep.py  test_entropy.py  test_entropy_accumulator.py  test_imports.py  test_kmeans_fix.py  test_make_data.py  test_model_analyzer.py
