[project]
name = "nam-entropy"
version = "0.2.0"
description = "Neural Activation Map entropy analysis tools"
authors = [
    {name = "Jonathan Hanke", email = "jonhanke@princeton.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML dependencies - loosened for Colab compatibility
    "torch>=2.0.0",
    "numpy>=1.22",
    "pandas>=2.0",
    "scikit-learn>=1.0",

    # HuggingFace ecosystem
    "transformers>=4.30",
    "datasets>=2.0",
    "accelerate>=0.20",           # Required for device_map="auto"

    # Configuration & validation
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",

    # Utilities
    "tqdm>=4.0",
    "entmax>=1.3",
    "ipywidgets>=8.0",
    "python-dotenv>=1.0",

    # Visualization
    "matplotlib>=3.6",
    "seaborn>=0.12",
]

[project.optional-dependencies]
# For users who want maximum performance (may conflict with Colab)
performance = [
    "torch>=2.4.0",
    "numpy>=2.0",
]

# Development dependencies
dev = [
    "pytest>=8.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
